<resources>
  <string name="app_name">Noute</string>
  <string name="empty_list">Nenhum item adicionado</string>
  <string name="home">Home</string>
  <string name="title_example">Titulo</string>
  <string name="content_example">Content</string>
  <string name="type_your_text">Digite sua nota</string>
  <string name="add">Adicionar</string>
  <string name="timestamp_example">25 jun - 14 30</string>
  <string name="favorite_message">Item favorito</string>
  <string name="yes">Sim</string>
  <string name="no">Não</string>
  <string name="added_to_fav">Adicionado aos favoritos</string>
  <string name="settings">Configurações</string>
  <string name="share">Compartilhar</string>
  <string name="popup_message">O que deseja fazer?</string>
  <string name="favorite">Favoritar</string>
  <string name="cancel">Cancelar</string>
  <string name="delete">Excluir nota</string>
  <string name="deleted">Deletado</string>
  <string name="user">Usuário</string>
  <string name="search">Pesquisar</string>
  <string name="search_hint">Pesquisar</string>
  <string name="notes">Notas</string>
  <string name="favorites">Favoritas</string>
  <string name="title_text">Título</string>
  <string name="sugests">Sugestões</string>
  <string name="about">Sobre</string>
  <string name="card_actions_title">Personalizar</string>
  <string name="card_actions">Ações</string>
  <string name="select_color">Cor</string>
  <string name="dialog_title">O que deseja fazer?</string>
  <string name="removed_from_fav">Removido dos favoritos</string>
  <string name="ok">Concluído</string>
  <string name="by_date">Ordenar por data de criação</string>
  <string name="by_modified">Ordenar por modificação</string>
  <string name="by_color">Ordenar por cor</string>
  <string name="grid_view">Visualizar Grid</string>
  <string name="linear_view">Visualização Linear</string>
  <string name="by_alphabetical">Ordem alfabética</string>
  <string name="delete_confirm">Deseja excluir a nota selecionada?</string>
</resources>
