<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/icons"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <RelativeLayout
      android:id="@+id/layoutMain"
      android:animateLayoutChanges="true"
      android:background="@color/icons"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/layoutEdit"
        android:animateLayoutChanges="true"
        android:layout_height="wrap_content">
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/card_actions_title"
          android:textSize="@dimen/font_small"
          android:id="@+id/custom"
          android:layout_marginLeft="@dimen/default_margin"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginRight="@dimen/default_margin"
          android:textColor="@color/nt_blue"/>

      <View
          android:background="@color/nt_silver"
          android:layout_margin="@dimen/default_margin"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/margin_2dp"/>
      <RelativeLayout android:layout_width="match_parent"
          android:orientation="horizontal"
          android:animateLayoutChanges="true"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_message"
            android:id="@+id/favorite"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:textColor="@color/nt_gray"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/switchCompat"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@null" android:checked="false"/>
      </RelativeLayout>
      <RelativeLayout android:layout_width="match_parent"
          android:orientation="horizontal"
          android:animateLayoutChanges="true"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_color"
            android:id="@+id/selectColor"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:textColor="@color/nt_gray"/>
        <View
            android:layout_toRightOf="@+id/selectColor"
            android:background="@color/nt_red_card"
            android:id="@+id/red"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <View
            android:layout_toRightOf="@+id/red"
            android:background="@color/nt_blue_card"
            android:id="@+id/blue"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <View
            android:layout_toRightOf="@+id/blue"
            android:background="@color/nt_yellow_card"
            android:id="@+id/yellow"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <View
            android:layout_toRightOf="@+id/yellow"
            android:background="@color/nt_silver_card"
            android:id="@+id/silver"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
      </RelativeLayout>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/card_actions"
          android:textSize="@dimen/font_small"
          android:id="@+id/actions"
          android:layout_marginLeft="@dimen/default_margin"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginRight="@dimen/default_margin"
          android:textColor="@color/nt_blue"/>
      <View
          android:background="@color/nt_silver"
          android:layout_margin="@dimen/default_margin"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/margin_2dp"/>
      <Button
          android:id="@+id/remove"
          android:text="@string/delete"
          android:textColor="@color/nt_black"
          android:padding="@dimen/margin_small"
          android:layout_marginLeft="@dimen/default_margin"
          android:layout_marginRight="@dimen/default_margin"
          android:layout_marginTop="@dimen/default_margin"
          android:background="@color/nt_silver"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
      <Button
          android:id="@+id/cancel"
          android:text="@string/cancel"
          android:textColor="@color/nt_black"
          android:padding="@dimen/margin_small"
          android:layout_marginLeft="@dimen/default_margin"
          android:layout_marginRight="@dimen/default_margin"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginBottom="@dimen/default_margin"
          android:background="@color/nt_silver"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
    </LinearLayout>
  </RelativeLayout>
</ScrollView>