<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/nt_silver"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
  <RelativeLayout
      android:id="@+id/layoutMain"
      android:animateLayoutChanges="true"
      android:background="@color/icons"
      android:layout_width="match_parent"
      android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
        android:orientation="vertical"
        android:id="@+id/layoutEdit"
        android:animateLayoutChanges="true"
        android:layout_height="wrap_content">
      <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:background="@drawable/back_edittext_options"
          android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_large"
            android:padding="@dimen/default_margin"
            android:id="@+id/title"
            android:textColorHint="@color/nt_white"
            android:textColor="@color/nt_white"
            android:background="@null"
            android:layout_marginTop="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginLeft="@dimen/margin_small"
            android:textCursorDrawable="@drawable/text_cursor_cyan"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/default_margin"
            android:id="@+id/content"
            android:textColorHint="@color/nt_white"
            android:background="@null"
            android:textColor="@color/nt_white"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginRight="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            android:textCursorDrawable="@drawable/text_cursor_cyan"/>
      </LinearLayout>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:text="@string/card_actions_title"
          android:textSize="@dimen/font_small"
          android:id="@+id/custom"
          android:layout_marginLeft="@dimen/default_margin"
          android:layout_marginTop="@dimen/default_margin"
          android:layout_marginRight="@dimen/default_margin"
          android:textColor="@color/nt_blue"/>

      <View
          android:background="@color/nt_silver"
          android:layout_marginLeft="@dimen/default_margin"
          android:layout_marginBottom="@dimen/default_margin"
          android:layout_marginRight="@dimen/default_margin"
          android:layout_marginTop="@dimen/margin_small"
          android:layout_width="wrap_content"
          android:layout_height="@dimen/margin_2dp"/>
      <RelativeLayout android:layout_width="match_parent"
          android:orientation="horizontal"
          android:animateLayoutChanges="true"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_message"
            android:id="@+id/favorite"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:textColor="@color/nt_gray"/>
        <android.support.v7.widget.SwitchCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:id="@+id/switchCompat"
            android:layout_marginRight="@dimen/default_margin"
            android:background="@null" android:checked="false"/>
      </RelativeLayout>
      <RelativeLayout android:layout_width="match_parent"
          android:orientation="horizontal"
          android:animateLayoutChanges="true"
          android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_color"
            android:id="@+id/selectColor"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginRight="@dimen/default_margin"
            android:textColor="@color/nt_gray"/>
        <Button
            android:layout_toRightOf="@+id/selectColor"
            android:background="@color/nt_pink"
            android:id="@+id/pink"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <Button
            android:layout_toRightOf="@+id/pink"
            android:background="@color/nt_ligthpink"
            android:id="@+id/lightpink"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <Button
            android:layout_toRightOf="@+id/lightpink"
            android:background="@color/nt_orange"
            android:id="@+id/orange"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <Button
            android:layout_toRightOf="@+id/orange"
            android:background="@color/nt_yellow"
            android:id="@+id/yellow"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <Button
            android:layout_toRightOf="@+id/yellow"
            android:background="@color/nt_green"
            android:id="@+id/green"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <Button
            android:layout_toRightOf="@+id/selectColor"
            android:background="@color/nt_lightgreen"
            android:id="@+id/lightgreen"
            android:layout_below="@+id/pink"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <Button
            android:layout_toRightOf="@+id/lightgreen"
            android:background="@color/nt_blue"
            android:id="@+id/blue"
            android:layout_below="@+id/pink"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <Button
            android:layout_toRightOf="@+id/blue"
            android:background="@color/nt_gray"
            android:id="@+id/gray"
            android:layout_below="@+id/pink"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <Button
            android:layout_toRightOf="@+id/gray"
            android:background="@color/nt_white"
            android:id="@+id/white"
            android:layout_below="@+id/pink"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>
        <Button
            android:layout_toRightOf="@+id/white"
            android:background="@color/nt_black"
            android:id="@+id/black"
            android:layout_below="@+id/pink"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_width="@dimen/box_color"
            android:layout_height="@dimen/box_color"/>

      </RelativeLayout>
      <Button
          android:id="@+id/ok"
          android:text="@string/ok"
          android:textColor="@color/nt_white"
          android:padding="@dimen/margin_small"
          android:layout_marginLeft="@dimen/default_margin"
          android:layout_marginRight="@dimen/default_margin"
          android:layout_marginTop="@dimen/margin_large"
          android:layout_marginBottom="@dimen/default_margin"
          android:background="@drawable/primary_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"/>
    </LinearLayout>
  </RelativeLayout>
</ScrollView>